Rearranged files to separate tests from implementation and separate problems from the answers