@@ -1,15 +1,16 @@
-package searches;
+package searches.answers;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
+import searches.BreadthFirstSearch;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-public class BreadthFirstSearch_AnswerKeyTest {
+public class BreadthFirstSearchTest {
 
     @ParameterizedTest
     @MethodSource("getBreadthFirstSearches")
@@ -30,13 +31,13 @@ public class BreadthFirstSearch_AnswerKeyTest {
 
     static GraphSearchTestCase[] getBreadthFirstSearches() {
         return new GraphSearchTestCase[]{
-                new GraphSearchTestCase("empty graph always returns an empty list or null", new BreadthFirstSearch_AnswerKey(),
+                new GraphSearchTestCase("empty graph always returns an empty list or null", new BreadthFirstSearch(),
                         new SearchResult(1, 2, Collections.emptyList()),
                         new SearchResult(2, 1, Collections.emptyList()),
                         new SearchResult(5, 1, Collections.emptyList())
                 ),
                 new GraphSearchTestCase("straight line",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(2, 3)
                                 .addEdge(3, 4),
@@ -53,13 +54,13 @@ public class BreadthFirstSearch_AnswerKeyTest {
                         // this is definitely enough for now!
                 ),
                 new GraphSearchTestCase("every node can reach itself without moving",
-                        new BreadthFirstSearch_AnswerKey(/* empty! */),
+                        new BreadthFirstSearch(/* empty! */),
                         new SearchResult(1, 1, List.of(1)),
                         new SearchResult(2, 2, List.of(2))
                         // you get the idea. We don't need to check for more of the same thing!
                 ),
                 new GraphSearchTestCase("search through a small graph",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -82,7 +83,7 @@ public class BreadthFirstSearch_AnswerKeyTest {
                 ),
 
                 new GraphSearchTestCase("search through a medium graph",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -112,6 +113,7 @@ public class BreadthFirstSearch_AnswerKeyTest {
         };
     }
 
+
     @ParameterizedTest
     @MethodSource("getReachEveryNodeTestCases")
     void canReachEveryNode(CanReachEveryNodeTestCase testCase) {
@@ -124,11 +126,11 @@ public class BreadthFirstSearch_AnswerKeyTest {
 
     static CanReachEveryNodeTestCase[] getReachEveryNodeTestCases() {
         return new CanReachEveryNodeTestCase[]{
-                new CanReachEveryNodeTestCase("empty graph", new BreadthFirstSearch_AnswerKey(), Collections.emptySet(), false),
-                new CanReachEveryNodeTestCase("singleton graph", new BreadthFirstSearch_AnswerKey(), Set.of(1), true),
-                new CanReachEveryNodeTestCase("unconnected graph", new BreadthFirstSearch_AnswerKey(), Set.of(1, 2, 3, 4), false),
+                new CanReachEveryNodeTestCase("empty graph", new BreadthFirstSearch(), Collections.emptySet(), false),
+                new CanReachEveryNodeTestCase("singleton graph", new BreadthFirstSearch(), Set.of(1), true),
+                new CanReachEveryNodeTestCase("unconnected graph", new BreadthFirstSearch(), Set.of(1, 2, 3, 4), false),
                 new CanReachEveryNodeTestCase("straight line",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(2, 3)
                                 .addEdge(3, 4),
@@ -136,7 +138,7 @@ public class BreadthFirstSearch_AnswerKeyTest {
                         true
                 ),
                 new CanReachEveryNodeTestCase("small graph",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -156,7 +158,7 @@ public class BreadthFirstSearch_AnswerKeyTest {
                 ),
 
                 new CanReachEveryNodeTestCase("medium interconnected graph",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -180,7 +182,7 @@ public class BreadthFirstSearch_AnswerKeyTest {
                 ),
 
                 new CanReachEveryNodeTestCase("small disjoint graph",
-                        new BreadthFirstSearch_AnswerKey()
+                        new BreadthFirstSearch()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
