@@ -1,15 +1,16 @@
-package searches;
+package searches.answers;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
+import searches.DijkstrasSearch;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-public class DijkstrasSearch_AnswerKeyTest {
+public class DijkstrasSearchTest {
 
     @ParameterizedTest
     @MethodSource("getDijkstrasSearchTestCases")
@@ -30,13 +31,13 @@ public class DijkstrasSearch_AnswerKeyTest {
 
     static GraphSearchTestCase[] getDijkstrasSearchTestCases() {
         return new GraphSearchTestCase[]{
-                new GraphSearchTestCase("empty graph always returns an empty list or null", new DijkstrasSearch_AnswerKey(),
+                new GraphSearchTestCase("empty graph always returns an empty list or null", new DijkstrasSearch(),
                         new SearchResult(1, 2, Collections.emptyList()),
                         new SearchResult(2, 1, Collections.emptyList()),
                         new SearchResult(5, 1, Collections.emptyList())
                 ),
                 new GraphSearchTestCase("straight line",
-                        new DijkstrasSearch_AnswerKey()
+                        new DijkstrasSearch()
                                 .addEdge(1, 2, 2.0)
                                 .addEdge(2, 1, 1.0)
                                 .addEdge(2, 3, 3.0)
@@ -56,14 +57,14 @@ public class DijkstrasSearch_AnswerKeyTest {
                         // this is definitely enough for now!
                 ),
                 new GraphSearchTestCase("every node can reach itself without moving",
-                        new DijkstrasSearch_AnswerKey(/* empty! */),
+                        new DijkstrasSearch(/* empty! */),
                         new SearchResult(1, 1, List.of(1)),
                         new SearchResult(2, 2, List.of(2))
                         // you get the idea. We don't need to check for more of the same thing!
                 ),
                 new GraphSearchTestCase("search through a small undirected graph",
                         // taken from https://commons.wikimedia.org/wiki/File:Dijkstra_Animation.gif
-                        new DijkstrasSearch_AnswerKey()
+                        new DijkstrasSearch()
                                 .addUndirectedEdge(1, 2, 7.0)
                                 .addUndirectedEdge(1, 3, 9.0)
                                 .addUndirectedEdge(1, 6, 14.0)
@@ -97,11 +98,11 @@ public class DijkstrasSearch_AnswerKeyTest {
 
     static CanReachEveryNodeTestCase[] getReachEveryNodeTestCases() {
         return new CanReachEveryNodeTestCase[]{
-                new CanReachEveryNodeTestCase("empty graph", new DijkstrasSearch_AnswerKey(), Collections.emptySet(), false),
-                new CanReachEveryNodeTestCase("singleton graph", new DijkstrasSearch_AnswerKey(), Set.of(1), true),
-                new CanReachEveryNodeTestCase("unconnected graph", new DijkstrasSearch_AnswerKey(), Set.of(1, 2, 3, 4), false),
+                new CanReachEveryNodeTestCase("empty graph", new DijkstrasSearch(), Collections.emptySet(), false),
+                new CanReachEveryNodeTestCase("singleton graph", new DijkstrasSearch(), Set.of(1), true),
+                new CanReachEveryNodeTestCase("unconnected graph", new DijkstrasSearch(), Set.of(1, 2, 3, 4), false),
                 new CanReachEveryNodeTestCase("straight line",
-                        new DijkstrasSearch_AnswerKey()
+                        new DijkstrasSearch()
                                 .addEdge(1, 2, 2.0)
                                 .addEdge(2, 1, 1.0)
                                 .addEdge(2, 3, 3.0)
@@ -113,7 +114,7 @@ public class DijkstrasSearch_AnswerKeyTest {
                 ),
                 new CanReachEveryNodeTestCase("small graph",
                         // taken from https://commons.wikimedia.org/wiki/File:Dijkstra_Animation.gif
-                        new DijkstrasSearch_AnswerKey()
+                        new DijkstrasSearch()
                                 .addUndirectedEdge(1, 2, 7.0)
                                 .addUndirectedEdge(1, 3, 9.0)
                                 .addUndirectedEdge(1, 6, 14.0)
@@ -133,7 +134,7 @@ public class DijkstrasSearch_AnswerKeyTest {
                 ),
 
                 new CanReachEveryNodeTestCase("small disjoint graph",
-                        new DijkstrasSearch_AnswerKey()
+                        new DijkstrasSearch()
                                 .addEdge(1, 2, 0.0)
                                 .addEdge(3, 1, 1.0)
                                 .addEdge(2, 3, 3.5)
